// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteFooter renders correctly with no social links 1`] = `
.c8 #wcb_2 {
  display: none!important;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c4 {
  display: flex;
  gap: 1.5rem;
  justify-content: center;
  flex-wrap: wrap;
}

.c5 {
  display: flex;
}

.c9 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c0 {
  border-top: 1px solid rgba(255, 255, 255, 0.08);
  padding-top: 4rem;
  padding-bottom: 2rem;
}

.c2 {
  text-align: center;
  margin-bottom: 3rem;
  padding-bottom: 3rem;
  border-bottom: 1px solid rgba(255, 255, 255, 0.06);
}

.c3 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2rem;
  font-weight: 700;
  color: var(--color-headline);
  margin: 0 0 1.5rem;
  line-height: 1;
}

.c6 {
  flex-direction: column;
  align-items: center;
  gap: 1.5rem;
}

.c7 {
  display: flex;
  justify-content: center;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c3 {
    font-size: 2.5rem;
  }
}

<div>
  <footer
    class="c0"
    role="contentinfo"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Let's work together.
        </h2>
        <div
          class="c4"
        />
      </div>
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <div
              class="carbonbadge wcb-d "
              id="wcb"
            />
          </div>
        </div>
        <p
          class="c9"
          style="text-align: center;"
        >
          © 
          2026
           
          Andrea Agostini
        </p>
      </div>
    </section>
  </footer>
</div>
`;

exports[`SiteFooter renders correctly with social links 1`] = `
.c12 #wcb_2 {
  display: none!important;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c4 {
  display: flex;
  gap: 1.5rem;
  justify-content: center;
  flex-wrap: wrap;
}

.c7 {
  display: flex;
}

.c5 {
  color: var(--color-highlight);
  text-decoration: none;
  font-size: 1rem;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c5:hover {
  color: var(--color-tertiary);
}

.c5:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 2px;
}

.c9 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c0 {
  border-top: 1px solid rgba(255, 255, 255, 0.08);
  padding-top: 4rem;
  padding-bottom: 2rem;
}

.c2 {
  text-align: center;
  margin-bottom: 3rem;
  padding-bottom: 3rem;
  border-bottom: 1px solid rgba(255, 255, 255, 0.06);
}

.c3 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2rem;
  font-weight: 700;
  color: var(--color-headline);
  margin: 0 0 1.5rem;
  line-height: 1;
}

.c10 {
  text-align: center;
  color: var(--color-paragraph);
}

.c8 {
  flex-direction: column;
  align-items: center;
  gap: 1.5rem;
}

.c6 {
  font-weight: 700;
  color: var(--color-highlight);
}

.c11 {
  display: flex;
  justify-content: center;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c3 {
    font-size: 2.5rem;
  }
}

<div>
  <footer
    class="c0"
    role="contentinfo"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Let's work together.
        </h2>
        <div
          class="c4"
        >
          <a
            aria-label="LinkedIn"
            class="c5 c6"
            href="https://linkedin.com/in/agostiniandrea"
            rel="noopener noreferrer"
            target="_blank"
          >
            LinkedIn
          </a>
          <a
            aria-label="GitHub"
            class="c5 c6"
            href="https://github.com/agostiniandrea"
            rel="noopener noreferrer"
            target="_blank"
          >
            GitHub
          </a>
          <a
            aria-label="Email"
            class="c5 c6"
            href="mailto:a.agostini92@gmail.com"
          >
            Email
          </a>
        </div>
      </div>
      <div
        class="c7 c8"
      >
        <p
          class="c9 c10"
        >
          Building for the web, one component at a time. Based in Bangkok.
        </p>
        <div
          class="c11"
        >
          <div
            class="c12"
          >
            <div
              class="carbonbadge wcb-d "
              id="wcb"
            />
          </div>
        </div>
        <p
          class="c9"
          style="text-align: center;"
        >
          © 
          2026
           
          Andrea Agostini
        </p>
      </div>
    </section>
  </footer>
</div>
`;
